--- a/frappe_traceback_collector/public/templates/traceback_view.html
+++ b/frappe_traceback_collector/public/templates/traceback_view.html
@@ -45,16 +45,16 @@
     <p><i class="octicon octicon-file-text"></i><code>{{ frame.file }}: {{ frame.lnum }}</code>
     <div class="row">
        <div class="codebox">
-           <div class="col-lg-10">
+           <div class="col-lg-11">
                 {% for (var index in frame.lines) { %}
                     {% var line = frame.lines[index] %}
-                    <div class="line {{ index === frame.lnum ? "current": "" }}">
+                    <div class="line {{ index == frame.lnum ? "current": "" }}">
                         <span class="lineno text-mutted">{{ index }}</span>
                         <span class="code">{{ line }}</span>
                     </div>
                 {% } %}
            </div>
-           <div class="col-lg-2">
+           <div class="col-lg-1">
                 <span class="btn btn-xs btn-default" data-toggle="collapse" data-target="#frame-{{ frameid }}-locals">
                     <i class="icon-list-ul"> {{ __("Locals") }}</i>
                 </span>
@@ -62,8 +62,7 @@
        </div>
     </div>
      <div class="row">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-11 collapse" id="frame-{{ frameid }}-locals">
+        <div class="col-lg-12 collapse" id="frame-{{ frameid }}-locals">
             <h4>{{ __("Locals") }}</h4>
             {{ frappe.render_template("traceback_object", {x: frame.dump }) }}
         </div>
