--- a/frappe_traceback_collector/public/templates/traceback_view.html
+++ b/frappe_traceback_collector/public/templates/traceback_view.html
@@ -15,7 +15,7 @@
     .codebox .lineno {
         text-align: right;
         display: inline-block;
-        width: 100px;
+        width: 30px;
         opacity: .5;
     }
 
@@ -38,11 +38,14 @@
 <h3>{{ __("Exception") }}</h3>
 {{ frappe.render_template("traceback_object", {x: JSON.parse(doc.exception)}) }}
 
+<h3>{{ __("Locals") }}</h3>
+{{ frappe.render_template("traceback_object", {x: JSON.parse(doc.locals)} )}}
+
 <h3>{{ __("Traceback") }}</h3>
 {% var frames = JSON.parse(doc.frames); %}
 {% for (var i in frames) { %}
     {% var frameid = id(), frame = frames[i] %}
-    <p><i class="octicon octicon-file-text"></i><code>{{ frame.file }}: {{ frame.lnum }}</code>
+    <p><i class="octicon octicon-file-text"></i> <code>{{ frame.file }}: {{ frame.lnum }}</code>
     <div class="row">
        <div class="codebox">
            <div class="col-lg-11">
