Improved information about Python version

--- a/frappe_traceback_collector/public/templates/traceback_object.html
+++ b/frappe_traceback_collector/public/templates/traceback_object.html
@@ -3,7 +3,7 @@
     {% for (var key in x) { %}
     <tr>
         <td><code>{{ key }}</code></td>
-        <td width="70%">{{ x[key] }}</td>
+        <td>{{ x[key] }}</td>
     </tr>
     {% } %}
 </table>
