--- a/frappe_traceback_collector/public/templates/traceback_view.html
+++ b/frappe_traceback_collector/public/templates/traceback_view.html
@@ -34,6 +34,8 @@
 <dl>
     <dt>{{ __("Timestamp") }}: </dt>
     <dd>{{ doc.timestamp }}</dd>
+    <dt>{{ __("Relapsed") }}</dt>
+    <dd><code>{{ doc.relapses }}</code></dd>
 </dl>
 
 <h3>{{ __("Exception") }}</h3>
